# lichess_analyzer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
lichess_analyzer/api_reference/: openapi.json
lichess_analyzer/notebook/: analyze.ipynb  api_token.txt
lichess_analyzer/services/: api_scraping.py  book_opening_check.py  move_tree.py  my_openings.py  opening_variation.py
